--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <img class="logo" src="assets/flatagram-logo.png" />
 
     <!-- image card -->
-    <div class="image-container">
+    <div class="image-container" id="image-container">
+      <!--
       <div class="image-card">
         <h2 class="title">Title of image goes here</h2>
         <img src="./assets/image-placeholder.jpg" class="image" />
@@ -28,12 +29,13 @@
           <input
             class="comment-input"
             type="text"
-            name="comment"
+            name="content"
             placeholder="Add a comment..."
           />
           <button class="comment-button" type="submit">Post</button>
         </form>
       </div>
+      -->
     </div>
   </body>
 </html>
