Brad Beggs Attempt 1

--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+
+<!-- 
+
+  easier to leave the HTML alone to do updates. didn't change out text for variables 
+-->
+
+
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -12,7 +20,7 @@
 
     <!-- image card -->
     <div class="image-container">
-      <div class="image-card">
+      <div class="image-card" id="1">
         <h2 class="title">Title of image goes here</h2>
         <img src="./assets/image-placeholder.jpg" class="image" />
         <div class="likes-section">
@@ -24,7 +32,7 @@
           <li>And replace them with the real ones</li>
           <li>From the server</li>
         </ul>
-        <form class="comment-form">
+        <form class="comment-form" id="form">
           <input
             class="comment-input"
             type="text"
