nathan chung cc-3

--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
 
     <!-- image card -->
     <div class="image-container">
+      <title>Up Down Vote</title>
+      <script src="jquery.min.js"></script>
+      <script src="main.js"></script>
+    </head>
+
+    <body>
+      <div class="buttons">
+        <button id="down">Downvote</button>
+
+        <button id="up">Upvote</button>
+        <!-- this isn't working yet... woops!-->
       <div class="image-card">
         <h2 class="title">Title of image goes here</h2>
         <img src="./assets/image-placeholder.jpg" class="image" />
@@ -33,6 +44,12 @@
           />
           <button class="comment-button" type="submit">Post</button>
         </form>
+        <html>
+          <head>
+        
+            </div>
+          </body>
+        </html>
       </div>
     </div>
   </body>
