--- a/index.html
+++ b/index.html
@@ -26,12 +26,15 @@
         </ul>
         <form class="comment-form">
           <input
+            id="id1"
             class="comment-input"
             type="text"
             name="comment"
             placeholder="Add a comment..."
           />
-          <button class="comment-button" type="submit">Post</button>
+          <button class="comment-button" type="button" onclick="addComment()">
+            Post
+          </button>
         </form>
       </div>
     </div>
